--- a/carousel.html
+++ b/carousel.html
@@ -30,9 +30,7 @@
                 <article class="article">
 
                     <div class="name"><strong>Jean Philippe U.</strong></div>
-                    Vous pouvez commander les yeux fermé , étant de la même ville que le dépôt du site le gérant m’a
-                    même
-                    laisser venir récupérer ma commande sur place car j’étais pressé je recommande top<br> 1
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus nobis dolor, nemo quae dolorem soluta.<br> 1
                 </article>
                 <article class="article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, quae!Lorem
                     ipsum dolor sit amet consectetur adipisicing elit. Animi, quae!Lorem ipsum dolor sit amet
